<resources>
    <string name="app_name">Dream Life</string>

    <string name="prev_button_title">Prev</string>
    <string name="next_button_title">Next</string>

    <string name="menu_profile">Register</string>
    <string name="menu_house">House</string>
    <string name="menu_ambition">Job</string>
    <string name="menu_pet">Pet</string>
    <string name="menu_logout">Log Out</string>
    <string name="menu_you">You</string>
    <string name="menu_home">Home</string>
    <string name="menu_vision">Vision Board</string>

    <string name="welcome_message">Welcome to Dream Life</string>
    <string name="login_page">Login with username and password. Or click register to get started</string>
    <string name="email_label">Email:</string>
    <string name="password_label">Password:</string>
    <string name="login_button">LogIn</string>
    <string name="register_button">Register</string>

    <string name="email_hint">abc123@psu.edu</string>
    <string name="user_name_hint">username</string>
    <string name="password_hint">password</string>

    <string name="menu_info">Info</string>
    <string name="menu_register">Register</string>
    <string name="menu_login">Log In</string>
    <string name="login_error_title">Unable to login</string>
    <string name="login_error_message">Please retry using correct username and password.</string>
    <string name="register_error_title">Unable to Register</string>
    <string name="register_error_message">Please fill out all fields</string>
    <string name="last_name_label">Last Name:</string>
    <string name="user_name_label">Username:</string>
    <string name="log_in_prompt">Already have an account?</string>
    <string name="log_in_link"><u><b>Log in</b></u></string>
    <string name="register_prompt">Don\'t have an account?</string>
    <string name="register_link"><u><b>Sign up</b></u></string>

    <string name="save_confirmation">Selection Saved!</string>

    <string name="home_page_greeting"><b>Welcome back,\n</b>User!</string>
    <string name="home_page_header">Time to Start Dreaming</string>
    <string name="create_dream_life_text">Create Dream Life</string>
    <string name="view_vision_board_text">View Vision Boards</string>
    <string name="placeholder">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod </string>

    <string name="vb_saved">Vision board saved!</string>
    //dynamic text options
    <string name= "choose_character">Choose Your Character</string>
    <string name= "choose_house">Choose Your House</string>
    <string name= "choose_job">Choose Your Job</string>
    <string name= "choose_pet">Choose Your Pet</string>

    <string name= "home_button_desc">Home Button</string>
    <string name= "history_button_desc">History Button</string>
    <string name= "title_desc">My Vision Board</string>

    <string name= "default_text">What will you pick?</string>
    <string name="clear">Clear</string>
    <string name="back">Back</string>
    <string name="image_preview">image preview</string>
    <string name="next">Next</string>
    <string name="save">Save</string>
    <string name="app_logo">App logo</string>
    <string name="pushpin">pushpin</string>

    <string-array name="house_array">
        <item>Cloud Island</item>
        <item>Night Watch House</item>
        <item>Hidden Island</item>
        <item>Barn</item>
    </string-array>    <string-array name="job_array">
        <item>Lawyer</item>
        <item>Doctor</item>
        <item>Construction Worker</item>
        <item>Fireman</item>
    </string-array>    <string-array name="you_array">
        <item>Hercules</item>
        <item>Zayne</item>
        <item>Cleopatra</item>
        <item>Regina</item>
        <item>Samantha</item>
        <item>Dean</item>
    </string-array>    <string-array name="pet_array">
        <item>Ralph</item>
        <item>Michael</item>
        <item>Sandy</item>
        <item>Mittens</item>
        <item>Nathaniel</item>
    </string-array>

</resources>