<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/menu_profile"
        android:title="@string/menu_profile"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_you"
        android:title="@string/menu_you" />
    <item
        android:id="@+id/menu_house"
        android:title="@string/menu_house"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_ambition"
        android:title="@string/menu_ambition"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_pet"
        android:title="@string/menu_pet"
        app:showAsAction="never" />
    <item
        android:id="@+id/menu_logout"
        android:title="@string/menu_logout"
        app:showAsAction="never" />
</menu>