<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    android:background="@color/background_color">

    <!-- Title TextView -->

    <TextView
        android:id="@+id/dynamicText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="@string/choose_character"
        android:textColor="@color/tertiary_color"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/createDreamLifeCard"
        android:layout_width="0dp"
        android:layout_height="500dp"
        android:background="@color/primary_color"
        android:clickable="true"
        android:focusable="true"
        app:cardBackgroundColor="@color/primary_color"
        app:cardCornerRadius="8dp"
        app:cardElevation="6dp"
        app:layout_constraintBottom_toTopOf="@+id/createVisionBoardButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dynamicText">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/primary_purple_gradient_v2"></LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/image_preview"
                android:layout_width="0dp"
                android:layout_height="300dp"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="24dp"
                android:background="@color/off_white"
                android:contentDescription="@string/image_preview"
                android:padding="16dp"
                android:scaleType="fitCenter"
                android:src="@drawable/hercules"
                app:layout_constraintBottom_toTopOf="@+id/character_options_spinner"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.223" />

            <Spinner
                android:id="@+id/character_options_spinner"
                android:layout_width="200dp"
                android:layout_height="36dp"
                android:layout_marginBottom="136dp"
                android:background="@color/background_color"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@id/image_preview"
                app:layout_constraintHorizontal_bias="0.494"
                app:layout_constraintStart_toStartOf="@id/image_preview" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/next_button"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:background="@color/off_white"
                android:contentDescription="@string/next"
                android:padding="4dp"
                android:src="@drawable/next_button_icon"
                app:layout_constraintBottom_toBottomOf="@+id/save_button"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/save_button"
                app:layout_constraintTop_toTopOf="@+id/save_button"
                app:shapeAppearanceOverlay="@style/circleShape" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/prev_button"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginEnd="26dp"
                android:background="@color/off_white"
                android:contentDescription="@string/back"
                android:focusable="true"
                android:padding="4dp"
                android:src="@drawable/prev_button_icon"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/save_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintHorizontal_chainStyle="packed"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/character_options_spinner"
                app:layout_constraintVertical_bias="0.64"
                app:layout_constraintVertical_chainStyle="packed"
                app:shapeAppearanceOverlay="@style/circleShape" />

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/save_button"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginHorizontal="16dp"
                android:layout_marginEnd="26dp"
                android:background="@color/off_white"
                android:contentDescription="@string/save"
                android:src="@drawable/baseline_check_circle_24"
                app:layout_constraintBottom_toBottomOf="@+id/prev_button"
                app:layout_constraintEnd_toStartOf="@+id/next_button"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintStart_toEndOf="@+id/prev_button"
                app:layout_constraintTop_toTopOf="@+id/prev_button"
                app:shapeAppearanceOverlay="@style/circleShape" />


        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <!-- Create Vision Board Button -->
    <Button
        android:id="@+id/createVisionBoardButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="32dp"
        android:fontFamily="@font/poppins_semibold"
        android:text="Create Vision Board"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
